Updates to tidy up the look of the help and include the task information.

--- a/com.waratek.rules.ui.help/html/gettingstarted/gettingstarted.html
+++ b/com.waratek.rules.ui.help/html/gettingstarted/gettingstarted.html
@@ -734,11 +734,12 @@ asciidoc.install();
 <body class="article">
 <div id="header">
 <h1>Waratek Security Rules Editor</h1>
-<span id="author">The Waratek Locker and Waratek Application Security for Java can both use customized rules to help protect your business services. However manually customizing rules requires that the entire rule file is correct so that the rules engine can read the entire set. To make the creation of the rules simpler and safer Waratek has created a rules authoring editor that runs in the popular Eclipse environment.</span><br />
 </div>
 <div id="content">
 <div id="preamble">
 <div class="sectionbody">
+<div class="paragraph"><p><a id="overview"></a>
+The Waratek Locker and Waratek Application Security for Java can both use customized rules to help protect your business services.  However manually customizing rules requires that the entire rule file is correct so that the rules engine can read the entire set.  To make the creation of the rules simpler and safer Waratek has created a rules authoring editor that runs in the popular Eclipse environment.</p></div>
 <div class="paragraph"><p>This rules editor is free for anyone to use and has is supported in the current Eclipse Lunar (R and SR1) releases and the previous Eclipse Kepler (SR2).  These can be downloaded from the <a href="https://www.eclipse.org">Eclipse</a> website and are currently required to run the editor.</p></div>
 <div class="paragraph"><p>To run the Waratek Security Rules Editor first install you selected Eclipse platform.  Having done this you can use the built in Eclipse Install and update mechanism; this installed the authoring environment and ensures any missing dependencies are automatically installed on your behalf.  This authoring environment relies on:</p></div>
 <div class="ulist"><ul>
@@ -770,12 +771,9 @@ The Waratek Security Rules Editor is released under the  <a href="https://www.ec
 <div class="sect1">
 <h2 id="_installation_steps">Installation Steps</h2>
 <div class="sectionbody">
+<div class="paragraph"><p><a id="install"></a>
+If you already have an older version of the tool installed, first refer to uninstalling the tooling below.</p></div>
 <div class="olist arabic"><ol class="arabic">
-<li>
-<p>
-If you already have an older version of the tool installed, first refer to uninstalling the tooling below.
-</p>
-</li>
 <li>
 <p>
 First go to the <em>Help</em> menu and select <em>Install New Software&#8230;</em>
@@ -834,7 +832,8 @@ During the process you may be asked if it is ok to allow eclipse to accept incom
 <div class="sect1">
 <h2 id="_setting_up_the_repository">Setting up the Repository</h2>
 <div class="sectionbody">
-<div class="paragraph"><p>The Eclipse install process uses on line repositories to download new capabilities into the Eclipse platform.  The sites contain all of the information and resources the install needs to complete the installation process. To add the Waratek update site follow the steps below:</p></div>
+<div class="paragraph"><p><a id="repository"></a>
+The Eclipse install process uses on line repositories to download new capabilities into the Eclipse platform.  The sites contain all of the information and resources the install needs to complete the installation process. To add the Waratek update site follow the steps below:</p></div>
 <div class="olist arabic"><ol class="arabic">
 <li>
 <p>
@@ -871,7 +870,8 @@ cellspacing="0" cellpadding="4">
 <div class="sect1">
 <h2 id="_uninstalling_the_tooling">Uninstalling the Tooling</h2>
 <div class="sectionbody">
-<div class="paragraph"><p>Future releases and updates to the Waratek Security Editor for the Security Rules Version 1.0 will be made as an update via the install and update mechanism. However major version changes may be installed along side or in place of previous versions.  If you would prefer to uninstall a previous version of the editor follow the steps below:</p></div>
+<div class="paragraph"><p><a id="uninstall"></a>
+Future releases and updates to the Waratek Security Editor for the Security Rules Version 1.0 will be made as an update via the install and update mechanism. However major version changes may be installed along side or in place of previous versions.  If you would prefer to uninstall a previous version of the editor follow the steps below:</p></div>
 <div class="olist arabic"><ol class="arabic">
 <li>
 <p>
@@ -905,7 +905,7 @@ Once the uninstall has completed you will be asked to restart Eclipse. It is rec
 <div id="footnotes"><hr /></div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2014-10-15 14:40:03 PDT
+Last updated 2014-10-16 12:41:22 PDT
 </div>
 </div>
 </body>
