Updated the help system to not mention stand alone product or the RDF generator.

--- a/com.waratek.rules.ui.help/html/gettingstarted/gettingstarted.html
+++ b/com.waratek.rules.ui.help/html/gettingstarted/gettingstarted.html
@@ -739,10 +739,10 @@ asciidoc.install();
 <div id="preamble">
 <div class="sectionbody">
 <div class="paragraph"><p><a id="overview"></a>
-The Waratek Locker and Waratek AppSec for Java can both use customized rules to help protect your business services.  However manually customizing rules requires that the entire rule file is correct so that the rules engine can read the entire set.  To make the creation of the rules simpler and safer Waratek has created a rules authoring editor that runs on your desktop or in the popular Eclipse environment.</p></div>
+The Waratek Locker and Waratek AppSecurity for Java can both use customized rules to help protect your business services.  However manually customizing rules requires that the entire rule file is correct so that the rules engine can read the entire set.  To make the creation of the rules simpler and safer Waratek has created a rules authoring editor that runs on your desktop or in the popular Eclipse environment.</p></div>
 <div class="paragraph"><p>This rules editor is free for anyone to use and has is supported on Windows, Mac OS X and Linux, the plugins run in the current Eclipse Lunar (R and SR1) releases and the previous Eclipse Kepler (SR2).  These can be downloaded from the <a href="https://www.eclipse.org">Eclipse</a> website.</p></div>
 <div class="paragraph"><p>To run the Waratek Security Rules Editor simply download the version for your preferred Operating system.</p></div>
-<div class="paragraph"><p>To run the Waratek Security Rules Editor in Eclipse first install your selected Eclipse platform.  Having done this you can use the built in Eclipse Install and update mechanism; this installes the editing environment and ensures any missing dependencies are automatically installed on your behalf.  This environment relies on:</p></div>
+<div class="paragraph"><p>To run the Waratek Security Rules Editor in Eclipse first install your selected Eclipse platform.  Having done this you can use the built in Eclipse Install and update mechanism; this installs the editing environment and ensures any missing dependencies are automatically installed on your behalf.  This environment relies on:</p></div>
 <div class="ulist"><ul>
 <li>
 <p>
@@ -754,11 +754,6 @@ Eclipse Modeling Framework (EMF) SDK V 2.9.2
 Eclipse Extended Editor Framework (EEF) runtime V 1.2.0
 </p>
 </li>
-<li>
-<p>
-Xpand SDK V 1.4.0
-</p>
-</li>
 </ul></div>
 <div class="quoteblock">
 <div class="content">
@@ -767,77 +762,6 @@ The Waratek Security Rules Editor is released under the  <a href="https://www.ec
 </div>
 <div class="attribution">
 </div></div>
-</div>
-</div>
-<div class="sect1">
-<h2 id="_desktop_version">Desktop Version</h2>
-<div class="sectionbody">
-<div class="sect2">
-<h3 id="_installation_steps">Installation Steps</h3>
-<div class="paragraph"><p><a id="desktop"></a>
-If you have an older version of the editor installed either archive or delete the older version of the editor by compressing or deleting the existing Waratek directory.</p></div>
-<div class="paragraph"><p>To install the standalone desktop version of the editor download the version of the tool appropriate for your operating system.  The download is in a zipped format, unpack the zip file and copy the resulting <em>Waratek</em> folder to your OSs preferred application location.  Some recommended configurations are:</p></div>
-<div class="sect3">
-<h4 id="_windows">Windows</h4>
-<div class="olist arabic"><ol class="arabic">
-<li>
-<p>
-Move the <em>Waratek</em> folder into <em>C:\Program Files</em>.
-</p>
-</li>
-<li>
-<p>
-Start the application by double clicking the <em>SecurityRulesEditor.exe</em> file.
-</p>
-</li>
-<li>
-<p>
-You may configure a short cut to this file to make launching easier.
-</p>
-</li>
-</ol></div>
-</div>
-<div class="sect3">
-<h4 id="_mac_os_x">Mac OS X</h4>
-<div class="olist arabic"><ol class="arabic">
-<li>
-<p>
-Move the <em>Waratek</em> folder into your <em>Applications</em> folder.
-</p>
-</li>
-<li>
-<p>
-Start the application by double clicking the <em>SecurityRulesEditor</em> file.
-</p>
-</li>
-<li>
-<p>
-The application will show up in <em>Launchpad</em> and can be dragged onto the dock.
-</p>
-</li>
-</ol></div>
-</div>
-<div class="sect3">
-<h4 id="_linux">Linux</h4>
-<div class="olist arabic"><ol class="arabic">
-<li>
-<p>
-Move the <em>Waratek</em> folder to your preferred location.
-</p>
-</li>
-<li>
-<p>
-Start the application by double clicking the <em>SecurityRulesEditor</em> file.
-</p>
-</li>
-<li>
-<p>
-A link to the application can be added to your preferred windows manager launcher and the <em>icon.xpm</em> associated with it to identify the link.
-</p>
-</li>
-</ol></div>
-</div>
-</div>
 </div>
 </div>
 <div class="sect1">
