--- a/com.waratek.rules.ui.help/html/tasks/tasks.html
+++ b/com.waratek.rules.ui.help/html/tasks/tasks.html
@@ -770,7 +770,7 @@ In the following page provide a <em>Project name</em>, for example <em>my.jvm-1.
 </ol></div>
 </div>
 <div class="sect2">
-<h3 id="_creating_an_rdf_file">Creating an RDF File</h3>
+<h3 id="_creating_an_rdf_file">Creating a *.rules File</h3>
 <div class="paragraph"><p>Having created a project in which to store your RDF file follow the steps below to create an RDF file.</p></div>
 <div class="olist arabic"><ol class="arabic">
 <li>
@@ -973,36 +973,6 @@ Trace
 <h3 id="_rule_specific_properties">Rule Specific Properties</h3>
 <div class="paragraph"><p>Each of the rules also has their own specific properties used to define the rules behaviour.  Refer to the reference section to learn more about how each individual rule is described.</p></div>
 </div>
-</div>
-</div>
-<div class="sect1">
-<h2 id="_generating_the_rules">Generating the Rules</h2>
-<div class="sectionbody">
-<div class="paragraph"><p><a id="generate"></a>
-Once you are happy the ruled description is complete save the <strong>.rdf file.  A \</strong> infront of the file name will indicate the file has been edited after the last save took place.  To generate the *.rules file take the following steps:</p></div>
-<div class="olist arabic"><ol class="arabic">
-<li>
-<p>
-Right click on the editor and select <em>Generate Rules File</em>.
-</p>
-</li>
-<li>
-<p>
-If you forgot to save the file you will be asked if you would like to save the file and then generate.
-</p>
-</li>
-<li>
-<p>
-In the <em>Select Output Directory</em> choose the location you want the file to be output to and click <em>Open</em>.  Note that this will overwrite any existing *.rules files in that location.
-</p>
-</li>
-<li>
-<p>
-A <em>Rules Generated</em> dialog will let you know the genration has completed successfully or if there were any problems.
-</p>
-</li>
-</ol></div>
-<div class="paragraph"><p>Now that you have generated the rules file you may need to copy it to the appropriate location for deployment and issue the appropriate reload command to the rules engine.  Refer to the reference on how to deploy the rules themselves.</p></div>
 </div>
 </div>
 </div>
